--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Time and Space Complexity</h1>
-	<p>Time complexity is a measure of the efficiency of an algorithm in terms of time.</p>
-	<p><b>Space Complexity</b> refers to the amount of memory used by an algorithm. It can be expressed as O(n), where n is the size of the input data. </p>
+	<p>Time complexity is a measure of the efficiency of an algorithm in terms of time. It is important to write efficient algorithms.</p>
+	<p>Space Complexity refers to the amount of memory used by an algorithm. It can be expressed as O(n), where n is the size of the input data. <b>Space Complexity</b> is a crucial aspect to consider when analyzing algorithms.</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
